--- a/stylesdemo.css
+++ b/stylesdemo.css
@@ -1,8 +1,134 @@
-.text-img{
-background-color: blanchedalmond;
-display: flex;
+html,body{
+    font-family: "Merriweather Sans",sans-serif; 
+    /* background-image: linear-gradient(to right, #2BC0E4 0%, #EAECC6 51%, #2BC0E4 100%) */
+    /* background: linear-gradient(270deg, rgb(255, 78, 80), rgb(249, 212, 35)); */
+    background: linear-gradient(-45deg, #FFA63D, #FF3D77, #338AFF, #3CF0C5);
+}
+}
 
+
+.dashboard{
+    margin: 0;
+    /* background-color: black; */
+    /* background-image: linear-gradient(to right, #2BC0E4 0%, #EAECC6 51%, #2BC0E4 100%) */
+    color:  0.5;
+    margin: 13px;
+    padding: auto;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border-radius: 30px;
 }
-.text-img img{
-    height: 300px;
+.title{
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    letter-spacing: 4px;
 }
+.news-type{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 10px;
+}
+.news-type button{
+    display: flex;
+    height: 40px;
+    width: 400px;
+    justify-content: center;
+    align-items: center;
+    font-family: inherit;
+    font-size: 30px;
+    border-radius: 10px;
+} 
+.category-bar{
+    background: linear-gradient(270deg, rgb(255, 78, 80), rgb(249, 212, 35));
+    height: 80px;
+    /* background-color: aliceblue 0.765; */
+    justify-content: center;
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 20px;
+    border:4px solid black;
+    
+}
+.category-bar button{
+    height: 40px;
+    border-radius: 10px;
+    font-size:x-large;
+    width: 150px;
+    text-align: center;
+}
+.news-bar{
+    height: 900px;
+    /* border: 5px solid black; */
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-start;
+    gap: 10px;
+    align-items: center;
+    border-radius:40px ;
+    padding: 20px;
+    overflow:auto;
+}
+
+.news-bar::-webkit-scrollbar{
+    display: none;
+}
+
+.fa-solid fa-heart{
+    color: white;
+}
+
+.news-item{
+    background-color: rgb(255,255,255,0.5);
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    position: relative;
+    border-radius: 20px;
+    width: 100%;
+    height:300px;
+    border:4px solid black;
+}
+
+.news-title{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-family: inherit;
+    font-size: larger;
+}
+
+.news-item i {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    font-size: 45px;
+   
+}
+
+
+
+
+
+
+
+
+
+/* dashboard-over */
+/* .portal{
+    margin: 40px;
+    display: block;
+    flex-direction: column;
+    height:400px;
+background-color: blueviolet;
+}
+.portal img{
+    width: 100%;
+    height: 400px;
+} */
