--- a/newsfeed/stylesnf.css
+++ b/newsfeed/stylesnf.css
@@ -1,8 +1,22 @@
 html,body{
     font-family: "Merriweather Sans",sans-serif; 
-    background: linear-gradient(-45deg, #FFA63D, #FF3D77, #338AFF, #3CF0C5);
+    /* background: linear-gradient(-45deg, #FFA63D, #FF3D77, #338AFF, #3CF0C5); */
+    
 }
-
+.bgimg{
+    background-image: url(./newspapersafari.jpg);
+    filter: blur(8px);
+    z-index: -1;
+    -webkit-filter: blur(8px);
+    height: 100%; 
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+button{
+     font-weight: 400px;
+}
 
 .dashboard{
     margin: 0;
@@ -19,36 +33,13 @@ html,body{
     /* opacity: 0.5; */
     /* display: block; */
 }
-.title-logo{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 30px;
-    letter-spacing: 4px;
-    /* background-color: aqua; */
-}
-.logo{
-    /* background-color: brown; */
-    width: 30%;
-    display: flex;
-    height: 150px;
-    align-items: center;
-}
-.logo img{
-    width: 80px;
-    height: 80px;
-    padding-left: 10px;
-    display: flex;
-    opacity: 0.5;
-    /* background-color: aqua; */
-    /* background-image: linear-gradient(to right, #2BC0E4 0%, #EAECC6 51%, #2BC0E4 100%) */
-    /* border-radius: 30%; */
-    
-}
+
 .title{
     /* background-color: blue; */
-    width: 60%;
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    letter-spacing: 4px;
 }
 /* types of buttons */
 .button-types{
@@ -56,7 +47,7 @@ html,body{
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
-    border: 5px solid blanchedalmond;
+    /* border: 5px solid blanchedalmond; */
     padding:13px;
 }
 /* recent and load buttons */
@@ -109,42 +100,144 @@ html,body{
     background-color: black;
     color: aliceblue;
 }
-button:active{
-    border-bottom: 5px solid rgb(245, 6, 6);
-
-}
+/* news items display style */
 .news-bar{
-    height: 600px;
-    border: 5px solid black;
-    margin: 20px;
+    height: 800px;
+    /* border: 5px solid black; */
+    width: 80%;
+    margin: auto;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    /* justify-content:space-around; */
+    gap: 10px;
     align-items: center;
     border-radius:40px ;
-    box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.3);
+    padding: 20px;
+    overflow:scroll;
 }
 
+.news-bar::-webkit-scrollbar{
+    display: none;
+}
 
+.fa-solid fa-heart{
+    display: flex;
+    margin: auto;
+    color: white;
+}
 
-
-
-
-
-
-
-
-
-
-
-/* dashboard-over */
-/* .portal{
-    margin: 40px;
-    display: block;
+.news-item{
+    background-color: rgb(255,255,255,0.5);
+    display: flex;
     flex-direction: column;
-    height:400px;
-background-color: blueviolet;
-}
-.portal img{
+    padding: 10px;
+    position: relative;
+    border-radius: 20px;
     width: 100%;
-    height: 400px;
-} */
+    /* height:600px; */
+    border:4px solid black;
+    flex-wrap: wrap;
+}
+.news-content{
+    display: flex;
+    margin: auto;
+    height: 200px;
+    font-size: 20px;
+}
+.news-title{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-family: inherit;
+    font-size: larger;
+    height:100px;
+}
+
+.news-item i {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    font-size: 45px;
+    height:100px;
+}
+/*  */
+/* sidebar display styles */
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 0.1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidebar a {
+    padding: 18px 18px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 1.3s;
+    
+  }
+  
+  .sidebar a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidebar .closebtn {
+    color: aqua;
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    z-index: -1;
+  }
+  
+  .openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #111;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+  }
+  
+  .openbtn:hover {
+    background-color: #444;
+  }
+  
+  .logo{
+    height: 150px;
+    width: 100%;
+    display: flex;
+    margin: auto;
+    border-bottom: 2px solid #818181;
+    padding: 30px;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
+
+  .sidebar-menu{
+    /* padding-top: 25px; */
+    font-weight:55px;
+    margin-bottom: 30px;
+    line-height: 55px;
+  }
+
+
+/*  */
+/*login page styles  */
+
+/*  */
+
+
+
+
+
+
+
