--- a/stylesdemo.css
+++ b/stylesdemo.css
@@ -4,7 +4,40 @@ html,body{
     /* background: linear-gradient(270deg, rgb(255, 78, 80), rgb(249, 212, 35)); */
     background: linear-gradient(-45deg, #FFA63D, #FF3D77, #338AFF, #3CF0C5);
 }
+body, html {
+  height: 100%;
 }
+
+.image {
+  /* Add background img */
+  background-image: url("image.jpg");
+
+  /* Use filter to add blur effect */
+  filter: blur(6px);
+  
+  height: 100%;
+
+  /* Center the image */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Style the text */
+.text {
+  background-color: rgba(0, 0, 0, 0.4); /* Black partially transparent background */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+}
+
 
 
 .dashboard{
@@ -30,6 +63,7 @@ html,body{
     display: flex;
     justify-content: space-around;
     margin-bottom: 10px;
+    width: 70%;
 }
 .news-type button{
     display: flex;
@@ -91,8 +125,8 @@ html,body{
     padding: 10px;
     position: relative;
     border-radius: 20px;
-    width: 100%;
-    height:300px;
+    width: 80%;
+    height:400px;
     border:4px solid black;
 }
 
