--- a/newsfeed/stylesnf.css
+++ b/newsfeed/stylesnf.css
@@ -1,37 +1,24 @@
 html,body{
     font-family: "Merriweather Sans",sans-serif; 
-    /* background: linear-gradient(-45deg, #FFA63D, #FF3D77, #338AFF, #3CF0C5); */
-    
+    background: linear-gradient(-45deg, #FFA63D, #FF3D77, #338AFF, #3CF0C5);
+    background-image: url("./8k.jpeg");
 }
-.bgimg{
-    background-image: url(./newspapersafari.jpg);
-    filter: blur(8px);
-    z-index: -1;
-    -webkit-filter: blur(8px);
-    height: 100%; 
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-button{
-     font-weight: 400px;
-}
+
 
 .dashboard{
     margin: 0;
-    /* background-color: black; */
     /* background: linear-gradient(-45deg, #FFA63D, #FF3D77, #338AFF, #3CF0C5); */
-    color:aliceblue;
-    margin: 13px;
+    color:#111;
+    margin: 18px;
     padding: auto;
-    height: 250px;
+    /* height: 25vh; */
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     border-radius: 30px;
     /* opacity: 0.5; */
     /* display: block; */
+    
 }
 
 .title{
@@ -62,9 +49,11 @@ button{
     border-radius: 10px;
 } 
 .toggle{
-    height: 40px;
-    width: 400px;
+    height: 5vh;
+    width: 10vw;
     left:220;
+    /* margin: auto; */
+    align-items:flex-start;
     padding-left: 30px;
     /* background-color: bisque; */
 }
@@ -74,7 +63,8 @@ button{
 .newsbtn{
     display:flex;
     /* background-color: aquamarine; */
-    width:70%;
+
+    width:60vw;
     justify-content: space-around;
 }
 .category-bar{
@@ -90,15 +80,19 @@ button{
 }
 
 .category-bar button{
-    height: 40px;
+    height: 4vh;
     border-radius: 10px;
     font-size:x-large;
-    width: 150px;
-    text-align: center;
+    width: 10vw;
+    text-align:center;
+    flex-wrap: wrap;
+    font-size: 2.5vh;
+    
 }
  button:hover{
     background-color: black;
     color: aliceblue;
+    transition: 1.2s;
 }
 /* news items display style */
 .news-bar{
@@ -232,9 +226,56 @@ button{
 
 /*  */
 /*login page styles  */
+.login-title{
+    top:100vh;
+}
+#login{
+    display: block;
+    font-size: larger;
+    height: 700px;
+    width: 700px;
+    border: 4px solid black; 
+    margin: auto;
+    align-items: center;
+    position: absolute;
+    top: 400px;
+    left:30%;
+    background-color:grey;
+}
 
-/*  */
-
+/* responsive design */
+@media (max-width:992px) {
+    .dashboard{
+        margin: 0;
+        /* background: linear-gradient(-45deg, #FFA63D, #FF3D77, #338AFF, #3CF0C5); */
+        color:#111;
+        margin: 13px;
+        padding: auto;
+        height: 250px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        border-radius: 30px;
+        /* opacity: 0.5; */
+        /* display: block; */
+        display: none;
+    }
+    .dashboard{
+        margin: 0;
+        /* background: linear-gradient(-45deg, #FFA63D, #FF3D77, #338AFF, #3CF0C5); */
+        color:#111;
+        margin: 13px;
+        padding: auto;
+        height: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        border-radius: 30px;
+        /* opacity: 0.5; */
+        /* display: block; */
+        display: none;
+    }
+}
 
 
 
