--- a/newsapp/styles2.css
+++ b/newsapp/styles2.css
@@ -15,7 +15,18 @@ body {
   background-color: #131516;
   font-family: 'Merriweather', serif;
 }
-
+::-webkit-scrollbar{
+  width:12px;
+  height: 30px;
+  }
+  ::-webkit-scrollbar-thumb{
+    border-radius: 6px;
+  background:linear-gradient(transparent,#ecd91c);
+  }
+  ::-webkit-scrollbar-thumb:hover{
+    border-radius: 6px;
+  background:linear-gradient(transparent,#30ff00);
+  }
 nav {
   margin-top: 5vh;
   padding: 1vh;
@@ -100,7 +111,8 @@ nav {
 .navbar-btn .categry-btn {
   width: 120px;
   padding: 10px 0px;
-  font-size: 0.8rem;
+  font-size: 1.0rem;
+  font-weight: 900;
   border: none;
   background-color: #000000;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
@@ -110,8 +122,9 @@ nav {
 }
 
 .navbar-btn button:hover {
-  background-color: #1c1b19;
-  color: #ecd91c;
+    transform: translateY(-10px 0.2s);
+    box-shadow: 0 40px 70px rgba(236,217,28,0.5);
+
 }
 
 .navbar-btn a {
@@ -180,102 +193,92 @@ select > option {
   background: none;
   border: none;
   font-size:2dvb;
-  /
   padding:10px;
 }
 
-.grid-container {
-  margin: 30px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 10px;
-  padding: 30px;
-  width: 90%;
-  background-color:black;
-  /* opacity: 0.3; */
-  border: 2px solid black;
-}
 
-.grid-item {
-  width: 100%;
-  z-index: 1;
-  height: fit-content;
-  border: 2px solid black;
-  position: relative;
-  text-align: center;
-}
-
-.grid-item img {
-  height: 100%;
-  width: 100%;
-  padding: 0.2rem;
-}
-
-.grid-item p {
-  width: 100%;
-  /* border: 2px solid rgb(155, 44, 44); */
-  position: absolute;
-  /* z-index: 1; */
-  bottom: 0;
-  left: 0;
-  margin: 0;
-}
 
 /* newsbar styles */
 .newsbar {
   display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   width: 90%;
-  height: 700px;
-  background-color: rgb(145, 185, 204);
-  border: 2px solid black;
-  overflow-y: scroll;
+  height: 800px;
+  /* background-color: rgb(145, 185, 204); */
+  border: none;
+   box-shadow: inset 5px 5px 5px rgba(255,255,255,0.2),
+              inset -5px -5px 15px rgba(255, 255, 255, 0.1),
+              5px 5px 15px rgba(255,255,255,0.3),
+              -5px -5px 15px rgba(255,255,255,0.1);  ;
+  border-radius: 15px;
+ 
 }
 .newsbar-title-1{
   width: 300px;
   display: flex;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: 30px;
   /* border: 2px solid black; */
 }
 .mainnews{
   margin: 25px;
   width: 90%;
   height: 300px;
-  border: 2px solid black;
+  border: none;
   display: flex;
   justify-content: center;
   padding: 10px;
 }
 .maincards{
   width:50%;
-  border: 2px solid black;
+  border:none;
   margin:10px;
+  position: relative;
+
+}
+.maincards img{
+  border-radius:1.2rem; 
+}
+.para{
+  position: absolute;
+  bottom:0;
+  color:white;
+  background: rgba(0, 0, 0, 0.5);
+  width:100%;
+}
+.para-1{
+  position: absolute;
+  bottom:0;
+  color:white;
+  background: rgba(0, 0, 0, 0.5);
+  width:100%;
 }
 .subcards{
   width:50%;
-  border: 2px solid black;
+  border: none;
   display:flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   overflow-y: auto;
 }
 .subcard{
+  background-color: azure;
   width:95%;
-  border: 2px solid black;
+  border: none;
   display: flex;
-  justify-content: center;
   align-items: center;
   height:200px;
   margin: 10px;
+  position: relative;
+  border-radius:1.2rem;
 }
 .Trending-News{
   margin: 25px;
   width: 90%;
   height: fit-content;
-  border: 2px solid black;
+  border: none;
 }
 
 .mainnews-2{
@@ -291,12 +294,109 @@ select > option {
 .subcards img{
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit:fill;
   object-position: center;
+  border-radius: 5px;
+}
+.subcards::-webkit-scrollbar{
+width:12px;
+height: 30px;
+}
+.subcards::-webkit-scrollbar-thumb{
+  border-radius: 6px;
+background:linear-gradient(transparent,#ecd91c);
+}
+.subcards::-webkit-scrollbar-thumb:hover{
+  border-radius: 6px;
+background:linear-gradient(transparent,#30ff00);
 }
 /* newsbar styles */
+
+/* category styles */
+.categorycards{
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  /* display: none; */
+  width:95%;
+  height: 700px;
+  /* background-color: rgba(235, 28, 63, 0.534); */
+  border: 1px solid #484b51;
+  overflow-y: scroll;
+  /* background-color: rgba(0, 0, 0, 0.8); */
+  flex-wrap: wrap;
+  color:rgb(250, 245, 245,0.8);
+  box-shadow: inset 5px 5px 5px rgba(0,0,0,0.2),
+  inset -5px -5px 15px rgba(255, 255, 255, 0.1),
+  5px 5px 15px rgba(0,0,0,0.3),
+  -5px -5px 15px rgba(255,255,255,0.1);  ;
+border-radius: 15px;
+}
+.categorycardsdsply{
+  display: flex;
+  /* justify-content: left; */
+  width: 100%;
+  border: none;
+   flex-wrap: wrap;
+   background-color:rgba(253,253,253 0.3);
+}
+.categorycard{
+  margin: 25px;
+  width: 45%;
+  height: 300px;
+  border: none;
+  display: flex;
+  padding: 10px;
+  box-shadow: inset 5px 5px 5px rgba(0,0,0,0.2),
+              inset -5px -5px 15px rgba(255, 255, 255, 0.1),
+              5px 5px 15px rgba(0,0,0,0.3),
+              -5px -5px 15px rgba(255,255,255,0.1);  ;
+  border-radius: 15px;
+  }
+
+.categorycard:hover{
+  transform: translateY(-30px);
+  transition: 1.2s;
+  box-shadow: 0 40px 70px rgba(0,0,0,0.5);
+}
+.category-title{
+  margin: 25px;
+  /* display: flex; */
+  /* justify-content: center; */
+  display: block;
+  text-align: center;
+  width: 95%;
+  padding: 10px;
+  border: none;
+}
+.categoryimg{
+  width: 50%;
+  margin: 10px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: -15px -15px 15px rgba(0, 0, 0, 0.3);
+}
+.categoryimg img{
+  width: 100%;
+  height: 100%;
+  object-fit:fill;
+  object-position: center;
+  border-radius:12px;
+}
+.categorycontent{
+  width: 50%;
+  margin: 10px;
+  overflow:hidden;
+  color:rgb(250, 245, 245,);
+}
+/* category styles */
+
 .footer{
-  height: 400px;
+  margin-top: 30px;
+  bottom:0;
+  height: 200px;
+  width: 95%;
+  border: 2px solid black;
 }
 
 
@@ -308,6 +408,9 @@ select > option {
 }
 
 @media screen and (max-width: 500px) {
+  .app-name{
+    font-size: 1.8rem;
+  }
   .navbar-btn {
     flex-direction: column;
     align-items: center;
@@ -317,15 +420,29 @@ select > option {
     margin: 5px;
   }
 
-  .grid-item {
-    flex-basis: 100%;
-  }
-
   .search {
     width: 100%;
   }
 
   .search-bar .search-btn {
     width: 10%;
+  }
+  .para .maincard{
+    font-size: 0.6rem;
+  }
+  .para{
+    font-size: 0.4rem;
+  }
+  .categorycardsdsply{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: left; */
+    width: 100%;
+    border: none;
+     flex-wrap: wrap;
+     background-color:rgba(253,253,253 0.3);
+  }
+  .categorycard{
+    width: 90%;
   }
 }
