--- a/stylestest.css
+++ b/stylestest.css
@@ -1,106 +1,54 @@
-body {
-    background-color: #8e8a8a63;
-  }
-  
-  /* News Grid styles */
-  .newsbar {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-auto-rows: 150px; /* Default row height for smaller cards */
-    grid-gap: 30px;
-    max-width: 1200px;
-    margin: 20px auto;
-  }
-  
-  
-  
-  .card {
-    background-color: #fff;
-    border-radius: 10px;
-    transition: box-shadow 0.3s ease;
-  }
-  
-  .card img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    border-radius: 10px 10px 0 0;
-  }
-  
-  .card-content {
-    padding: 10px;
-  }
-  
-  .card-content h2 {
-    margin: 0;
-    font-size: 16px;
-    color: #333;
-  }
-  
-  .card-content p {
-    margin-top: 5px;
-    color: #777;
-  }
-  
-  .card:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
-  /* Card size variations using grid area */
-  .card-small {
-    grid-area: span 1 / span 1;
-    grid-auto-rows: 150px;
-  }
-  
-  .card-medium {
-    grid-area: span 2 / span 1;
-    grid-auto-rows: 200px;
-  }
-  
-  .card-large {
-    grid-area: span 1 / span 2;
-    grid-auto-rows: 300px;
-  }
-  
-  .card-extra-large {
-    grid-area: span 2 / span 2;
-    grid-auto-rows: 300px;
-  }
-  
-  /* Footer styles */
-  footer {
-    background-color: #f2f2f2;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .footer-content {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .footer-content p {
-    margin: 0 15px;
-    color: #444;
-    font-size: 14px;
-    cursor: pointer;
-    transition: color 0.3s ease;
-  }
-  
-  .footer-content p:hover {
-    color: #db0f0f;
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.class-1{
+  position: absolute;
+  height: 200px;
+  width: 1900px;
+  background-color: brown;
+  color: black;
+  border: 3px solid yellowgreen;
+}
+.class-2{
+  margin: 20px;
+  /* position: absolute; */
+  height: 200px;
+  width: 1900px;
+  background-color: rgb(165, 42, 93);
+  color: black;
+  border: 3px solid rgb(228, 235, 234);
+}
+.class-3{
+  margin: 20px;
+  /* position: absolute; */
+  height: 200px;
+  width: 1900px;
+  background-color: rgb(9, 39, 190);
+  color: rgb(29, 192, 64);
+  border: 3px solid rgb(247, 77, 142);
+}
+.class-4{
+  margin: 20px;
+  /* position: absolute; */
+  height: 200px;
+  width: 1900px;
+  background-color: rgb(236, 240, 5);
+  color: rgba(0, 0, 0, 0.13);
+  border: 3px solid rgb(205, 60, 50);
+}
+
+.class-5{
+  position: absolute;
+  bottom: 0;
+  height: 200px;
+  width: 1400px;
+  padding: 0.34rem;
+  background-color: rgb(51, 230, 185);
+  color: black;
+  border: 3px solid rgb(82, 101, 212);
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+}
